# wilkuu.xyz

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  compose.yaml  hugo.toml
.github/workflows/: hugo.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/controllers/: misc_pages.rs  mod.rs  posts.rs
app/src/pages/: misc_pages.rs
content/: about.md
content/posts/: back.md  first_hugo_article.md  piece_of_web.md
content/projects/: _index.md  inttech.md  memadd.md  tarpit.md
dev/: nginx.conf
entity/: Cargo.toml
entity/src/entities/: mod.rs  post.rs  user.rs
frontend/: rollup.config.mjs
frontend/js/: index.ts
frontend/scss/: main.scss
layouts/: robots.txt  robots2.txt
layouts/shortcodes/: br.html  nofollow.html
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240119_130354_create_posts.rs  m20240131_114949_create_user_table.rs
scripts/: docker_build.sh  filter_env  import_env
src/: main.rs
static/: .gitignore  style.css  test.html
views/: Cargo.toml
views/src/: home.rs  lib.rs  posts.rs
views/templates/: home.html  main.html  post_edit.html  posts.html
wilkuu_xyz_frontend/: package-lock.json  package.json
wilkuu_xyz_frontend/js/: index.ts
wilkuu_xyz_rs/: Cargo.toml
wilkuu_xyz_rs/rs/: main.rs  util.rs
wilkuu_xyz_rs/rs/pages/: misc_pages.rs  mod.rs
wilkuu_xyz_rs/templates/: main.html
