[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = ["mock", "runtime-tokio-native-tls", "sqlx-postgres"] }
uuid = { version = "1.7.0",features = ["v4","fast-rng"]}
