[package]
name = "views"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["comrak", "serde-json", "with-axum"] }
askama_axum = { version = "0.4.0", features = ["config", "markdown", "serde-json", "urlencode"] }
axum-core = "0.4.1"

