[package]
name = "views"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { git = "https://github.com/Wilkuu-2/askama.git", features = ["comrak", "serde-json", "markdown"] }
# askama_axum = { version = "0.4.0", features = ["config", "markdown", "serde-json", "urlencode"] }
serde = { version = "1.0.193", features = ["derive"] }
entity = {path = "../entity"} 
axum-named-routes = "0.2.3"
  

