[package]
name = "wilkuu_xyz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="server"
path="rs/main.rs"

[features]
docker = [] 

[dependencies]
askama = { version = "0.12.1", features = ["mime", "serde", "serde-json", "markdown", "with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["tracing", "macros", "http2", "headers"] }
axum-core = "0.3.4"
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version="0.3", features = ["env-filter"]}
